2006-07-18  Jason Clinton <me@jasonclinton.com>

        * cscmi.c: Fix #347679 completely this time :)

2006-07-18  Jason Clinton <me@jasonclinton.com>

        * cscmi.c: Fix bug-buddy invocation with Andreas patch.
	Fixes bug #347679 

2006-07-07  Andreas Røsdal <andrearo@stud.ntnu.no>

        * menu.c: Fix logo displayed in about dialog, reported in bug #346914. 
	* sol.c: Fix window icon, as reported in bug #346909.
        Patch by me, bug reported by mclasen@redhat.com.

2006-06-15  Richard Hoelscher  <rah@rahga.com>

	* BUGS: Deleted obsolete file.
	* get_titles.pl: Nonessential replacement of periphrastic perl.

2006-06-03  Callum McKenzie  <callum@spooky-possum.org>

	* sol.scm: Give the card-guardian while loop something to chew
	on. An empty body seems to cause a crash.

2006-05-21  Callum McKenzie  <callum@spooky-possum.org>

	* sol.scm: Explicitly protect the cards from garbage
	collection. We pull the cards into lists on the C side that guile
	doesn't know about and occaisionally the GC bites us. Doing
	everything on the scheme side might be better, but not today. See
	bug #342038.

2006-05-18  Callum McKenzie  <callum@spooky-possum.org>

	* rules/klondike.scm: Remvoe unlimited redeals, it isn't
	significantly easier than the normal two-redeal limit.
	Rework search-foundation as an or-map.

	* menu.c: Make the mutually-exclusive options load properly.

2006-05-17  Callum McKenzie  <callum@spooky-possum.org>

	* rules/klondike.scm: Add the unlimited redeals and no redeals
	options from Zach Keene.

	* menu.c: Fixes to the radio group code now I have a proper radio
	group to play with. 

2006-05-13  Callum McKenzie  <callum@spooky-possum.org>

	* events.c: Make mouse movement off a card that can't be dragged
	cancel the click on that card. See bug #329183. Also set the
	cursor correctly so it stays grasped if you move around the card
	during a click.

2006-05-12  Callum McKenzie  <callum@spooky-possum.org>
