@@ -1,3 +1,9 @@
+2006-07-23  Callum McKenzie  <callum@spooky-possum.org>
+
+	* sol.scm (make-card): Redo the garbage-collection protection
+	code. Drop the use of guardians since I think I was misusing them
+	and use an auxiliary list of references instead.
+
 2006-07-18  Jason Clinton <me@jasonclinton.com>
 
         * cscmi.c: Fix #347679 completely this time :)
